syntax = "proto3";
package protodemo;
option go_package = "github.com/go-leo/gors/example/api/protodemo;protodemo";
import "google/protobuf/any.proto";

// @GORS @Path(/v1)
service ProtoDemo {
  // @GORS @DELETE @Path(/UriBinding/JSONRender/:name) @UriBinding @JSONRender
  rpc DELETEUriBindingJSONRender (HelloRequest) returns (HelloReply) {}

  // @GORS @GET @Path(/UriBinding/IndentedJSONRender/:name) @UriBinding @IndentedJSONRender
  rpc GETUriBindingIndentedJSONRender (HelloRequest) returns (HelloReply) {}

  // @GORS @GET @Path(/UriQueryBinding/SecureJSONRender/:name) @UriBinding @QueryBinding @SecureJSONRender
  rpc GETUriQueryBindingSecureJSONRender (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/HeaderFormPostBinding/JSONPJSONRender) @HeaderBinding @FormPostBinding @JSONPJSONRender
  rpc POSTHeaderFormPostBindingJSONPJSONRender (HelloRequest) returns (HelloReply) {}

  // @GORS @PATCH @Path(/HeaderProtoFormBinding/PureJSONRender) @HeaderBinding @FormBinding @PureJSONRender
  rpc PATCHHeaderProtoFormBindingPureJSONRender (HelloRequest) returns (HelloReply) {}

  // @GORS @PUT @Path(/HeaderJSONBinding/AsciiJSONRender) @HeaderBinding @JSONBinding @AsciiJSONRender
  rpc PUTHeaderJSONBindingAsciiJSONRender (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/ProtoBufBinding/ProtoBufRender) @ProtoBufBinding @ProtoBufRender
  rpc POSTProtoBufBindingProtoBufRender (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/ProtoJSONBinding/ProtoJSONRender) @ProtoJSONBinding @ProtoJSONRender
  rpc POSTProtoJSONBindingProtoJSONRender (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/CustomBinding/CustomRender) @CustomBinding @CustomRender
  rpc POSTCustomBindingCustomRender (HelloRequest) returns (HelloReply) {}

  rpc NotDefine (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/POSTSetHeaderTrailer) @ProtoJSONBinding @ProtoJSONRender
  rpc POSTSetHeaderTrailer (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/Error) @ProtoJSONBinding @ProtoJSONRender
  rpc POSTError (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/GRPCStatus) @ProtoJSONBinding @ProtoJSONRender
  rpc POSTGRPCStatus (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
  int32 age = 2;
  double salary = 3;
  string Token = 4;
}

message HelloReply {
  string message = 1;
}

message CommonReply {
  int32 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
}